<resources>
    <string name="app_name">AcademicAdvisor</string>
    <string name="welcome_name">Academic Advisor</string>
    <string name="welcome_create_btn">Create an Account</string>
    <string name="welcome_login_btn">Login</string>
    <string name="create_account_about_you">Tell Us a little about yourself. . .</string>
    <string name="create_account_name">Name:</string>
    <string name="create_account_major">Major:</string>
    <string name="create_account_interests">Interests:</string>
    <string name="create_account_classes">Classes Taken:</string>
    <string name="create_account_name_edit">Name</string>
    <string name="verify_user_enterpassword">Enter Password:</string>
    <string name="user_login_selectaprofile">Select a Profile</string>
    <string name="user_login_selectprofile">Profile</string>
    <string name="title_activity_course_search">CourseSearch</string>

    <string-array name="ui_num_credits_entries">
        <item>&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;</item>
        <item>&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;&#x20;1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
