<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wisc.academicadvisor.CreateAnAccount">

    <TextView
        android:id="@+id/aboutYouText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_about_you"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_name"
        android:layout_below="@+id/aboutYouText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/majorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_major"
        android:layout_below="@+id/nameText"
        android:layout_alignLeft="@+id/nameText"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/interestsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_interests"
        android:layout_below="@+id/majorText"
        android:layout_alignLeft="@+id/majorText"
        android:layout_alignStart="@+id/majorText"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/classesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_classes"
        android:layout_below="@+id/interestsText"
        android:layout_alignLeft="@+id/interestsText"
        android:layout_alignStart="@+id/interestsText"
        android:layout_marginTop="150dp" />

    <EditText
        android:id="@+id/nameInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="55dp"
        android:layout_toRightOf="@id/nameText"
        android:layout_toEndOf="@id/nameText"
        android:textSize="15sp"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/majorInputSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="115dp"
        android:layout_toRightOf="@id/majorText"
        android:layout_toEndOf="@id/majorText"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/interestsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="text"
        android:layout_marginRight="15dp"
        android:layout_alignBaseline="@+id/interestsText"
        android:layout_alignBottom="@+id/interestsText"
        android:layout_alignLeft="@+id/interestsInputList"
        android:layout_alignStart="@+id/interestsInputList"
        android:layout_alignRight="@+id/interestsAddBtn"
        android:layout_alignEnd="@+id/aboutYouText" />

    <ListView
        android:id="@+id/interestsInputList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/interestsText"
        android:layout_toEndOf="@id/interestsText"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="35dp"
        android:layout_alignTop="@id/interestsText"
        android:layout_alignBottom="@id/classesText"/>

    <ListView
        android:id="@+id/classesInputList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/classesText"
        android:layout_toEndOf="@id/classesText"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignTop="@id/classesText"/>

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:layout_marginRight="15dp"
        android:backgroundTint="#e12525"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/classesText"
        android:layout_alignStart="@+id/classesText"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/interestsAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:backgroundTint="#e12525"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/interestsInput"
        android:layout_toRightOf="@+id/aboutYouText"
        android:layout_alignTop="@+id/interestsInput" />


</RelativeLayout>
